<resources>
    <string name="app_name">KeyBox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="key_name">Password Name</string>
    <string name="key_account">Account</string>
    <string name="key_password">Password</string>
    <string name="key_note">Notes</string>
    <string name="key_edit">Edit</string>
    <string name="ok">Done</string>
    <string name="color_palette">Color Picker</string>
    <string name="colors">Colors</string>
    <string name="error_name_empty">Invalid Name</string>
    <string name="error_account_empty">Invalid Account</string>
    <string name="error_password_empty">Invalid Password</string>
    <string name="cancel">Cancel</string>
    <string name="done">OK</string>
    <string name="create_password">Generate</string>
    <string name="empty">Empty</string>
    <string name="key_time">Last Edit Time</string>
    <string name="date_format">yyyy/MM/dd HH:mm</string>
    <string name="total_format">%d Passwords All</string>
    <string name="delete">delete</string>
    <string name="timeout_info">Already six months did not change password.You had better change it</string>
    <string name="error_input">Input Invalid</string>
    <string name="delete_done">It has been deleted</string>
    <string name="confirm_format">Are you sure to delete %s?</string>
    <string name="backout">UNDO</string>
    <string name="copy_account">Copy the Account</string>
    <string name="copy_password">Copy the Password</string>
    <string name="color">Color</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="patter_error">Wrong Pattern</string>
    <string name="pattern_success">Accept</string>
    <string name="seed_set">Draw an unlock pattern</string>
    <string name="seed_confirm">Draw pattern again to confirm</string>
    <string name="seed_check">Confirm saved pattern</string>
    <string name="seed_change">Change the password</string>
    <string name="seed_export">Export the password</string>
    <string name="seed_import">Import the password</string>
    <string name="error_overload">Try again after %d seconds</string>
    <string name="account_select">select</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="content">Encrypted text</string>
    <string name="copy_board">Copied to the clipboard</string>
    <string name="error_export">export failed</string>
    <string name="error_data_empty">empty data!</string>
    <string name="add_success">operator success</string>
    <string name="error_password">password invalid</string>
    <string name="nav_more">More</string>
    <string name="nav_help">Help</string>
    <string name="nav_protocol">Open source licenses</string>
    <string name="nav_about">About</string>
    <string name="help">
        1.Purpose\n
            \t\tKeep your accounts\' passwords which is group by color , and don\'t worry about security problem.\n\n
        2.Security\n
            \t\tThis APP ask for Vibration(for pattern unlock) and SD card Read(for custom wallpaper) Permission which is to say it can not upload your passwords or save it to SD card. It is saved in the private database with encrypt, so
no apps could access it even if they get the root privilege.\n\n
        3.Encryption\n
            \t\tEncrypted by AES(Advanced Encryption Standard) which takes billions of years to crack without your key.\n
            \t\tAPP will not save the encryption key,The key is your pattern which you draw when you log in, and what verify your pattern is a special text encrypted when you set your pattern, so the encryption key is safe too.
\n\n
        4.BackUp\n
            \t\tThis APP can not back up your passwords, so given that all the passwords will disappear when this APP is uninstalled, you\'d better export your
passwords once in a while and send to anywhere to keep it, such as PC disk. and nobody could crack it.\n\n
    </string>
    <string name="protocol">
        APP was opened sourced at https://github.com/Jude95/KeyChain\n\n

        Copyright 2015 Jude.\n\n
        Licensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at\n

           http://www.apache.org/licenses/LICENSE-2.0\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n\n

        A brief description of Apache Licence 2.0 ：\n
        Keep the announcement；Mark out what you have changed。\n\n

        Open source licenses：\n
        Beam:\nhttps://github.com/Jude95/Beam\n\n
        SwipeBackHelper:\nhttps://github.com/Jude95/SwipeBackHelper\n\n
        EasyRecyclerView:\nhttps://github.com/Jude95/EasyRecyclerView\n\n
        TAGView:\nhttps://github.com/Jude95/TAGView\n\n
        Utils:\nhttps://github.com/Jude95/Utils\n\n
        material-dialogs:\nhttps://github.com/afollestad/material-dialogs\n\n
        gson:\nhttps://github.com/google/gson\n\n
        material-ripple:\nhttps://github.com/balysv/material-ripple\n\n
        jpinyin:\nhttps://github.com/stuxuhai/jpinyin\n\n
        butterknife:\nhttps://github.com/JakeWharton/butterknife\n\n
    </string>
    <string name="export_info">Copy all the passwords to the clipboard, nobody can understand it without the key, so you can stick it anywhere.</string>
    <string name="import_info">Exported encrypted text pasted into here, and enter your password to import,the duplicate passwords will be merged.</string>
    <string name="error_pattern">Wrong Pattern</string>
    <string name="mode">Mode</string>
    <string name="size">Length</string>
    <string name="error_no_account">You have not saved an account</string>
    <string name="developer">Developed by Jude95</string>
    <string name="contact">Contact me：973829691@qq.com</string>
    <string name="display_password">Display password</string>
    <string name="display_password_info">Display password on main screen</string>
    <string name="display_pattern_path">Display pattern path</string>
    <string name="display_pattern_path_info">Display pattern path on lock screen</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="default_wallpaper">Default wallpaper</string>
    <string name="nav_setting">Setting</string>
    <string name="request_permissions">I can\'t select Image with out Permissions</string>
    <string-array name="password_type">
        <item>Numbers and Letters</item>
        <item>Numbers, LowerCase and UpperCase letters</item>
        <item>Numbers only</item>
    </string-array>
</resources>
