<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_passoword"
            android:icon="@drawable/menu_password"
            android:title="@string/seed_change" />

        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/menu_internal"
            android:title="@string/seed_import" />

        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/menu_external"
            android:title="@string/seed_export" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>