<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_toolbar"/>

    <FrameLayout
        android:id="@+id/head_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/import_info"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.5"
            style="@style/Base.TextAppearance.AppCompat.Title"
            />

    </FrameLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/content"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/key_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:statusBarBackground="@color/tans"
        >
        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/ok"
            android:textColor="?attr/colorAccent"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </android.support.design.widget.CoordinatorLayout>



</LinearLayout>